k8s-on-premise-cloud/manifest/movie-web-backend-api-gateway-version-2/api-gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-api-gateway
  namespace: movie-web
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  type: NodePort
  selector:
    app: api-gateway
  ports:
    - port: 8800
      targetPort: 8800
      protocol: TCP
      nodePort: 31333
      name: tcp
  sessionAffinity: None
