k8s-on-premise-cloud/manifest/movie-web-backend-api-gateway-version-2/api-gateway-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-gateway-network-policy
  namespace: movie-web
spec:
  podSelector:
    matchLabels:
      app: movie-web-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: movie-web-frontend
